--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <h1>The MovieDB</h1>
     <form id="form">
       <input type="text" id="search" class="search" placeholder="search">
     </form>
